tests/type-checking/and-or-not-is/and/and_list_rhs_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// a: bool = True
// a = True and [True]
// 


builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "a"] {
        choco.ast.type_name() ["type_name" = "bool"]
      }
    } {
      choco.ast.literal() ["value" = !choco.ast.bool<True>]
    }
  } {
    choco.ast.assign() {
      choco.ast.id_expr() ["id" = "a"]
    } {
      choco.ast.binary_expr() ["op" = "and"] {
        choco.ast.literal() ["value" = !choco.ast.bool<True>]
      } {
        choco.ast.list_expr() {
          choco.ast.literal() ["value" = !choco.ast.bool<True>]
        }
      }
    }
  }
}
// CHECK: Semantic error:
